@@ -808,8 +808,4 @@ ASM_NAME(dct64_MMX):
 	popl %ebx
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
-
+NONEXEC_STACK
