@@ -67,7 +67,4 @@ ASM_NAME(do_equalizer_3dnow):
 	popl %esi
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
